--- a/package.json
+++ b/package.json
@@ -56,15 +56,14 @@
 		"cookie": "^1.0.2",
 		"devalue": "^5.1.1",
 		"esserializer": "^1.3.11",
+		"magic-string": "^0.30.17",
 		"next-json": "^0.4.0",
 		"php-serialize": "^5.0.1",
 		"serialize-anything": "^1.2.3",
 		"sjcl-codec-hex": "^1.0.0",
 		"sjcl-es": "^2.0.0",
-		"source-map": "^0.7.4",
 		"superjson": "^2.2.2",
-		"svelte": "^5.0.0",
-		"ts-morph": "^24.0.0"
+		"svelte": "^5.0.0"
 	},
 	"peerDependencies": {
 		"vite": "^5 || ^6"
