--- a/package.json
+++ b/package.json
@@ -53,31 +53,31 @@
 	"dependencies": {
 		"@macfja/serializer": "^1.1.4",
 		"browser-cookies": "^1.2.0",
-		"cookie": "^1.0.2",
-		"devalue": "^5.1.1",
+		"cookie": "^1.1.1",
+		"devalue": "^5.6.1",
 		"esserializer": "^1.3.11",
-		"magic-string": "^0.30.17",
-		"next-json": "^0.4.0",
-		"php-serialize": "^5.0.1",
+		"magic-string": "^0.30.21",
+		"next-json": "^0.5.1",
+		"php-serialize": "^5.1.3",
 		"serialize-anything": "^1.2.3",
 		"sjcl-codec-hex": "^1.0.0",
 		"sjcl-es": "^2.0.0",
-		"superjson": "^2.2.2",
-		"svelte": "^5.0.0"
+		"superjson": "^2.2.6",
+		"svelte": "^5.46.1"
 	},
 	"peerDependencies": {
-		"vite": "^5 || ^6"
+		"vite": "^5 || ^6 || ^7"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "^1.9.4",
-		"ava": "^6.2.0",
+		"@biomejs/biome": "^2.3.10",
+		"ava": "^6.4.1",
 		"npm-run-all": "^4.1.5",
-		"pkgroll": "^2.5.1",
+		"pkgroll": "^2.21.4",
 		"prettier-package-json": "^2.8.0",
-		"rollup": "^4.28.1",
+		"rollup": "^4.54.0",
 		"tsimp": "^2.0.12",
-		"typescript": "^5.7.2",
-		"vite": "^6.2.1"
+		"typescript": "^5.9.3",
+		"vite": "^7.3.0"
 	},
 	"keywords": [
 		"cookie",
