--- a/package.json
+++ b/package.json
@@ -62,10 +62,10 @@
 		"serialize-anything": "^1.2.3",
 		"sjcl-codec-hex": "^1.0.0",
 		"sjcl-es": "^2.0.0",
-		"superjson": "^2.2.6",
-		"svelte": "^5.46.1"
+		"superjson": "^2.2.6"
 	},
 	"peerDependencies": {
+		"svelte": "^5.0.0",
 		"vite": "^5 || ^6 || ^7"
 	},
 	"devDependencies": {
