--- a/biome.json
+++ b/biome.json
@@ -6,8 +6,7 @@
 		"useIgnoreFile": true
 	},
 	"files": {
-		"ignoreUnknown": false,
-		"ignore": ["./package.json"]
+		"ignoreUnknown": false
 	},
 	"formatter": {
 		"enabled": true,
