--- a/package.json
+++ b/package.json
@@ -39,12 +39,8 @@
 	],
 	"scripts": {
 		"build": "pkgroll --minify --clean-dist",
-		"fix": "run-s fix:*",
-		"fix:biome": "biome check --write .",
-		"fix:pkg": "prettier-package-json --use-tabs --write ./package.json",
-		"lint": "run-p --aggregate-output --continue-on-error --print-label lint:*",
-		"lint:biome": "biome check .",
-		"lint:pkg": "prettier-package-json --use-tabs ./package.json --list-different 1>/dev/null || prettier-package-json --use-tabs ./package.json | diff --color -u ./package.json -",
+		"fix": "biome check --write .",
+		"lint": "biome check .",
 		"prepublishOnly": "npm run build",
 		"test": "ava",
 		"test:watch": "ava --watch"
@@ -71,9 +67,7 @@
 	"devDependencies": {
 		"@biomejs/biome": "^2.3.10",
 		"ava": "^6.4.1",
-		"npm-run-all": "^4.1.5",
 		"pkgroll": "^2.21.4",
-		"prettier-package-json": "^2.8.0",
 		"rollup": "^4.54.0",
 		"tsimp": "^2.0.12",
 		"typescript": "^5.9.3",
