fix: update biome config for v2 and fix lint issues
- Update biome.json for v2 (organizeImports -> assist)
- Replace @ts-ignore with @ts-expect-error
- Fix assignment in expression (while loop)
- Fix non-null assertion
- Format code to biome standards

--- a/biome.json
+++ b/biome.json
@@ -12,14 +12,23 @@
 		"enabled": true,
 		"indentStyle": "tab"
 	},
-	"organizeImports": {
-		"enabled": true
+	"assist": {
+		"enabled": true,
+		"actions": {
+			"source": {
+				"organizeImports": {
+					"level": "on"
+				}
+			}
+		}
 	},
 	"linter": {
 		"enabled": true,
 		"rules": {
 			"recommended": true,
-			"correctness": { "noUnusedImports": "error" }
+			"correctness": {
+				"noUnusedImports": "error"
+			}
 		}
 	},
 	"javascript": {
